[project]
name = "abbrev"
version = "1.2.1"
description = "ðŸœ Expand abbreviations ðŸœ"
authors = [{ name = "Tom Ritchford", email = "tom@swirly.com" }]
requires-python = ">=3.8"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["xmod"]

[project.urls]
Homepage = "https://github.com/rec/abbrev"
Repository = "https://github.com/rec/abbrev"
Documentation = "https://rec.github.io/abbrev"

[tool.doks]
source = 'abbrev.py'
target = 'README.rst'

[dependency-groups]
dev = [
    "coverage",
    "flake8",
    "pytest",
    "readme-renderer",
    "mkdocs",
    "mypy",
    "ruff",
    "mkdocstrings[python]",
    "mkdocs-material",
]

[tool.uv]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"
[tool.coverage.run]
branch = true
source = ["abbrev"]

[tool.coverage.report]
fail_under = 90
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if False:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError"
]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
strict = true
